--- a/css/main.css
+++ b/css/main.css
@@ -8,11 +8,20 @@ body {
   font-family: Arial, sans-serif;
 }
 
+.container {
+  width: 70%;
+  margin: 0 auto;
+}
+
 /* Header */
 header {
+  width:100%;
+  height: 100px;
   background-color: #ff6900;
-  padding: 10px 20px;
+  padding: 10px;
   color: white;
+  position: fixed;
+  z-index: 900;
 }
 .top-bar {
   display: flex;
@@ -23,6 +32,113 @@ header {
   margin: 0 10px;
   color: white;
   text-decoration: none;
+}
+
+#logo {
+  height: 70px;
+  width: 300px;
+}
+
+
+/* Main grid */
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 140px;
+}
+.product-card {
+  width: calc((100%/3) - (40px / 3));
+  margin-bottom: 30px;
+  cursor: pointer;
+}
+.product-image {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+}
+.product-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  transition: opacity 0.3s ease-in-out;
+}
+.product-image .secondary {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+.product-image:hover .secondary {
+  opacity: 1;
+}
+.product-image:hover .primary {
+  opacity: 0;
+}
+
+/* Badge */
+.discount {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  background: red;
+  color: white;
+  padding: 5px;
+  font-size: 12px;
+}
+.eco {
+  position: absolute;
+  bottom: 10px;
+  left: 60px;
+  background: green;
+  color: white;
+  padding: 5px;
+  font-size: 12px;
+}
+.wishlist {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 18px;
+  color: black;
+}
+
+/* Info */
+.product-info {
+  margin-top: 10px;
+}
+.brand {
+  font-size: 12px;
+  color: gray;
+}
+.name {
+  font-weight: bold;
+}
+.price {
+  font-size: 14px;
+}
+.old-price {
+  text-decoration: line-through;
+  color: gray;
+  margin-left: 5px;
+}
+
+/* Footer */
+footer {
+  background-color: #1a1a1a;
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
+.footer-links a {
+  color: white;
+  margin: 0 10px;
+  text-decoration: none;
+}
+.socials {
+  margin-top: 10px;
 }
 
 
